--- a/CSVCrossJoin/View/MainWindow.xaml
+++ b/CSVCrossJoin/View/MainWindow.xaml
@@ -16,12 +16,12 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition Height="25" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="15" />
         </Grid.RowDefinitions>
 
         <Menu Grid.Row="0" DockPanel.Dock="Top">
@@ -69,23 +69,6 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-
-        <TextBlock Grid.Column="2" Grid.Row="1">Output columns</TextBlock>
-        <ListBox Grid.Column="2" Grid.Row="2" Name="outputColumnsListBox" Margin="15"
-         ItemsSource="{Binding OutputColumns, Mode=OneWay}">
-            <!-- Because CheckBox indicates selection, hide standard ListBox -->
-            <!-- selection behavior -->
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="{x:Type ListBoxItem}">
-                    <Setter Property="Focusable" Value="False"/>
-                </Style>
-            </ListBox.ItemContainerStyle>
-            <!-- Each item in list is a CheckBox -->
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <CheckBox Content="{Binding ItemValue}" IsChecked="{Binding IsSelected}"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        <ProgressBar Grid.Row="3" Grid.ColumnSpan="2" IsIndeterminate="{Binding TaskInProgress, Mode=OneWay}"/>
     </Grid>
 </Window>
